; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkbrncmdline.c_parseopts.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkbrncmdline.c_parseopts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"a:i:o:\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"Unknown option\00", align 1
@optarg = common dso_local global i8* null, align 8
@loadaddr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [58 x i8] c"loadaddress must be a decimal or hexadecimal 32-bit value\00", align 1
@input_file = common dso_local global i8* null, align 8
@output_file = common dso_local global i8* null, align 8
@optind = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8***)* @parseopts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parseopts(i32* %0, i8*** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8***, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8*** %1, i8**** %4, align 8
  br label %7

7:                                                ; preds = %36, %2
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* %8, align 4
  %10 = load i8***, i8**** %4, align 8
  %11 = load i8**, i8*** %10, align 8
  %12 = call i32 @getopt(i32 %9, i8** %11, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 %12, i32* %6, align 4
  %13 = icmp ne i32 %12, -1
  br i1 %13, label %14, label %37

14:                                               ; preds = %7
  %15 = load i32, i32* %6, align 4
  switch i32 %15, label %16 [
    i32 97, label %18
    i32 105, label %32
    i32 111, label %34
  ]

16:                                               ; preds = %14
  %17 = call i32 @usage(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  br label %36

18:                                               ; preds = %14
  %19 = load i8*, i8** @optarg, align 8
  %20 = call i32 @strtoul(i8* %19, i8** %5, i32 0)
  store i32 %20, i32* @loadaddr, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = load i8*, i8** @optarg, align 8
  %23 = icmp eq i8* %21, %22
  br i1 %23, label %29, label %24

24:                                               ; preds = %18
  %25 = load i8*, i8** %5, align 8
  %26 = load i8, i8* %25, align 1
  %27 = sext i8 %26 to i32
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %24, %18
  %30 = call i32 @usage(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0))
  br label %31

31:                                               ; preds = %29, %24
  br label %36

32:                                               ; preds = %14
  %33 = load i8*, i8** @optarg, align 8
  store i8* %33, i8** @input_file, align 8
  br label %36

34:                                               ; preds = %14
  %35 = load i8*, i8** @optarg, align 8
  store i8* %35, i8** @output_file, align 8
  br label %36

36:                                               ; preds = %34, %32, %31, %16
  br label %7

37:                                               ; preds = %7
  %38 = load i64, i64* @optind, align 8
  %39 = load i32*, i32** %3, align 8
  %40 = load i32, i32* %39, align 4
  %41 = sext i32 %40 to i64
  %42 = sub nsw i64 %41, %38
  %43 = trunc i64 %42 to i32
  store i32 %43, i32* %39, align 4
  %44 = load i64, i64* @optind, align 8
  %45 = load i8***, i8**** %4, align 8
  %46 = load i8**, i8*** %45, align 8
  %47 = getelementptr inbounds i8*, i8** %46, i64 %44
  store i8** %47, i8*** %45, align 8
  ret void
}

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i32 @usage(i8*) #1

declare dso_local i32 @strtoul(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
